--- a/addons/sourcemod/translations/gloves.phrases.txt
+++ b/addons/sourcemod/translations/gloves.phrases.txt
@@ -48,4 +48,56 @@
 	{
 		"en"	"Choose Glove"
 	}
+	"Seed"
+	{
+		"en"	"Seed"
+	}
+	"SeedTitle"
+	{
+		"en"	"Seed: %i"
+	}
+	"SeedTitleNoSeed"
+	{
+		"en"	"Seed: ∞"
+	}
+	"SeedRandom"
+	{
+		"en"	"Random Seed"
+	}
+	"SeedManual"
+	{
+		"en"	"Manual Seed"
+	}
+	"SeedSave"
+	{
+		"en"	"Save Current Seed"
+	}
+	"SeedInstruction"
+	{
+		"en"	"Write your desired seed into chat. To abort, type !cancel."
+	}
+	"SeedSuccess"
+	{
+		"en"	"Seed successfully applied."
+	}
+	"SeedCancelled"
+	{
+		"en"	"Seed operation aborted."
+	}
+	"SeedFailed"
+	{
+		"en"	"Invalid seed (0 - 8192)"
+	}
+	"SeedSaved"
+	{
+		"en"	"Seed saved."
+	}
+	"SeedReset"
+	{
+		"en"	"Seed reset."
+	}
+	"ResetSeed"
+	{
+		"en"	"Reset Seed"
+	}
 }
